<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.SwipeRefreshLayout android:id="@+id/objects_list_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:background="#FFF"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/items_added"
            android:text="no item added"
            android:textColor="@color/blue"
            android:layout_alignParentBottom="true"
            android:layout_width="wrap_content"
            android:layout_centerInParent="true"
            android:layout_height="wrap_content" />
        <ListView
            android:id="@+id/objects_list"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:layout_width="match_parent"
            android:layout_above="@id/items_added"
            android:layout_height="match_parent">

        </ListView>
    </RelativeLayout>
</android.support.v4.widget.SwipeRefreshLayout>