<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_login">
    <include layout="@layout/toolbar_layout"/>

    <android.support.v4.widget.DrawerLayout
        android:background="@color/green_heylist"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_marginTop="@dimen/abc_action_bar_default_height_material"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.youssef.list.MainActivity">
    <LinearLayout
        android:id="@+id/fragments_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        />
    <ListView
        android:id="@+id/navList"
        android:layout_width="200dp"
        android:layout_height="match_parent"
        android:layout_gravity="left|start"
        android:background="@drawable/background_toolbar_translucent_strong"/>
</android.support.v4.widget.DrawerLayout>

</FrameLayout>