...
                android:paddingLeft="@dimen/text_margin"
                android:paddingRight="@dimen/text_margin"
                android:textColor="@color/green_heylist"
                android:id="@+id/textView" />

            <Spinner
                android:id="@+id/orgsList"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_horizontal_margin"
                style="@style/spinner_style"
                />

...
                android:text="@string/confirm"
                android:textColor="#FFFF"
                android:layout_width="214dp"
                android:layout_height="32dp"
                tools:layout_editor_absoluteX="95dp"
                tools:layout_editor_absoluteY="152dp"
                android:id="@+id/choose"
                android:layout_marginBottom="@dimen/activity_horizontal_margin"
                android:background="#91A516"
                android:layout_weight="0.01" />

            <Button
                android:textColor="#FFFF"
...
