<?xml version="1.0" encoding="utf-8"?>
<TextView android:id="@+id/orgItem"


    android:gravity="center_horizontal"
    android:text="@string/confirm"
    android:textSize="18sp"
    android:textColor="#FFF"
    android:layout_width="214dp"
    android:layout_height="32dp"

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" />