<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:facebook="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="#E0E0E0"
    >

        <com.dd.ShadowLayout
            android:layout_centerInParent="true"
            android:layout_width="280dp"
            android:layout_height="wrap_content">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:weightSum="1"
                android:background="#FFF">
        <TextView
            android:layout_marginTop="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:inputType="textPersonName"
            android:text="@string/register_title"

            android:gravity="center"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:textSize="40sp"
            android:ems="10"
            tools:layout_editor_absoluteX="62dp"
            tools:layout_editor_absoluteY="31dp"
            android:paddingLeft="@dimen/text_margin"
            android:paddingRight="@dimen/text_margin"
            android:textColor="#91A516"
            android:id="@+id/title_register" />
        <com.facebook.login.widget.LoginButton
            android:id="@+id/login_fb"
            android:layout_width="214dp"
            android:layout_height="70dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            facebook:com_facebook_login_text="@string/facebook_register_button"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"/>
        <View android:layout_height="3dp"
            android:id="@+id/separator_register"
            android:layout_width="match_parent"
            android:background="@color/common_google_signin_btn_text_light_disabled"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"/>
        <Button

            android:paddingLeft="@dimen/activity_vertical_margin"
            android:paddingRight="@dimen/activity_vertical_margin"
            android:background="#91A516"
            android:layout_width="220dp"
            android:textColor="#FFF"
            android:elevation="10dp"
            android:layout_marginBottom="8dp"
            android:layout_height="40dp"

            android:id="@+id/show_email_register"



            android:text="@string/register_email_show"
            android:textSize="12sp"
            android:drawableLeft="@drawable/icon_email"
            android:textAllCaps="false"
            android:layout_weight="0.01"/>
        <EditText
            android:background="@drawable/text_rectangle"

            android:id="@+id/register_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/username"
            android:visibility="invisible"
            android:drawableLeft="@drawable/icon_username"
            android:textColorHint="#96B7CA6C"
            android:ems="10"
            tools:layout_editor_absoluteX="62dp"
            tools:layout_editor_absoluteY="31dp"
            android:drawablePadding="10dip"
            android:layout_marginBottom="@dimen/text_margin"
            android:paddingLeft="@dimen/text_margin"
            android:paddingRight="@dimen/text_margin"
            android:paddingTop="4dip"
            android:paddingBottom="4dip"
            android:textColor="#B7CA6C"

            />
        <EditText
            android:background="@drawable/text_rectangle"

            android:id="@+id/email_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/email_address"
            android:drawableLeft="@drawable/icon_email"
            android:textColorHint="#96B7CA6C"
            android:ems="10"
            android:visibility="invisible"
            tools:layout_editor_absoluteX="62dp"
            tools:layout_editor_absoluteY="31dp"
            android:drawablePadding="10dip"
            android:layout_marginBottom="@dimen/text_margin"
            android:paddingLeft="@dimen/text_margin"
            android:paddingRight="@dimen/text_margin"
            android:paddingTop="4dip"
            android:paddingBottom="4dip"
            android:textColor="#B7CA6C"
            />
        <EditText
            android:background="@drawable/text_rectangle"

            android:id="@+id/register_password"
            android:textColor="#B7CA6C"
            android:textColorHint="#96B7CA6C"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:drawableLeft="@drawable/icon_password"
            android:drawablePadding="10dip"
            android:hint="@string/password"
            android:visibility="invisible"

            android:paddingLeft="@dimen/text_margin"
            android:paddingRight="@dimen/text_margin"
            android:paddingTop="4dip"
            android:paddingBottom="4dip"
            android:layout_marginBottom="@dimen/text_margin"
            android:ems="10"
            tools:layout_editor_absoluteX="55dp"
            tools:layout_editor_absoluteY="86dp"
            />
        <EditText
            android:id="@+id/password_confirm"
            android:textColor="#B7CA6C"
            android:textColorHint="#96B7CA6C"
            android:layout_width="wrap_content"
            android:visibility="invisible"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:background="@drawable/text_rectangle"

            android:drawableLeft="@drawable/icon_password"
            android:drawablePadding="10dip"
            android:hint="@string/password_confirm"

            android:paddingLeft="@dimen/text_margin"
            android:paddingRight="@dimen/text_margin"
            android:paddingTop="4dip"
            android:paddingBottom="4dip"
            android:layout_marginBottom="@dimen/text_margin"
            android:ems="10"
            tools:layout_editor_absoluteX="55dp"
            tools:layout_editor_absoluteY="86dp"
            />
        <Button
            android:paddingLeft="@dimen/activity_vertical_margin"
            android:paddingRight="@dimen/activity_vertical_margin"
            android:background="#91A516"
            android:layout_width="220dp"
            android:textColor="#FFF"
            android:elevation="10dp"
            android:layout_marginBottom="8dp"
            android:layout_height="40dp"


            android:id="@+id/create_account"

            android:text="@string/register"

            tools:layout_editor_absoluteX="95dp"
            tools:layout_editor_absoluteY="152dp"
            android:visibility="invisible"
            android:layout_weight="0.01"/>
        <Button
            android:paddingLeft="@dimen/activity_vertical_margin"
            android:paddingRight="@dimen/activity_vertical_margin"
            android:background="#91A516"
            android:layout_width="220dp"
            android:textColor="#FFF"
            android:elevation="10dp"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:layout_height="40dp"


            android:id="@+id/back"

            android:text="@string/back"

            tools:layout_editor_absoluteX="95dp"
            tools:layout_editor_absoluteY="152dp"
            android:layout_weight="0.01"/>
            </LinearLayout>
        </com.dd.ShadowLayout>

    </RelativeLayout>