<resources>
    <string name="app_name">Hey!List</string>
    <string name="connect">Login</string>
    <string name="register">Register</string>
    <string name="add_users">Add users</string>
    <string name="new_item">New Item</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="error_not_connected">Connection problem, please retry again later</string>
    <string name="error_wrong_password">Wrong password</string>
    <string name="error_password_mismatch">Passwords don\'t match</string>
    <string name="retry">Retry</string>
    <string name="password_confirm">Confirm pwd</string>
    <string name="create_group">Create Group</string>
    <string name="create">Create</string>
    <string name="error_user_exists">User already exists</string>
    <string name="error_user_not_exist">User doesn\'t exist</string>
    <string name="disconnect">Disconnect</string>
    <string name="existing">Existing</string>
    <string name="new_user">New user</string>
    <string name="back">Back</string>
    <string name="add_users_title">Add Users</string>
    <string name="group_name">Group name</string>
    <string name="create_new_user">Create new</string>
    <string name="register_title">Register</string>
    <string name="error_title_generic">Error</string>
    <string name="add_title">Add</string>
    <string name="action_add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="error_no_group_add">You don\'t have a group to add synchronized objects</string>
    <string name="error_auth_failed">Failed authentication, please retry again</string>
    <string name="add_user_success">User successfully added</string>
    <string name="connecting">Connecting...</string>
    <string name="wait_msg">Please wait</string>
    <string name="error_group_exists">This group name is already taken</string>
    <string name="error_password_short">Password should be at least 8 characters</string>
    <string name="error_no_group_sync">You don\'t have a group to synchronize with</string>
    <string name="just">&#160;just</string>
    <string name="added">&#160;added&#160;</string>
    <string name="new_item_title">New Item</string>
    <string name="checked">"&#160;checked "</string>
    <string name="removed">&#160;removed&#160;</string>
    <string name="unchecked">&#160;unchecked&#160;</string>
    <string name="unchecked_title">Item Unchecked</string>
    <string name="removed_title">Item Removed</string>
    <string name="checked_title">Item Checked</string>
    <string name="to_the_list">&#160;to the list</string>
    <string name="from_the_list">&#160;from the list</string>
    <string name="on_the_list">&#160;on the list</string>
    <string name="confirm">Confirm</string>
    <string name="change_pwd">Change</string>
    <string name="email_address">E-mail address</string>
    <string name="empty_error">can\'t be empty</string>
    <string name="error_email_invalid">this e-mail adress is not valid</string>
    <string name="facebook_app_id">1802084513343070</string>
    <string name="register_email_show">Register with e-mail</string>
    <string name="welcome_message">Welcome&#160;</string>
    <string name="facebook_already_registered">This Facebook account is already registered, please login from the Login Screen</string>
    <string name="email_valid_warning">The e-mail address is used to send you a reminder of your login informations, do you confirm that it\'s a valid e-mail address?</string>
    <string name="email_validation_title">E-mail Validation</string>
    <string name="yes">Yes</string>
    <string name="facebook_permission_negative">Facebook not granted</string>
    <string name="facebook_register_button">Register with Facebook</string>
    <string name="error_blanks">Username can\'t contain spaces</string>
    <string name="tutorial">Tutorial</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="facebook_tip_msg">If you want to add an existing Facebook user, their username is as shown on their Facebook Profile. For example, Alex Steinberg on Facebook will have the username \"Alex Steinberg\"</string>
    <string name="facebook_tip_title">Facebook Tip</string>
    <string name="stop_showing">Don\'t show this again</string>
    <string name="leave_group">Leave group</string>
    <string name="warning_leave_group_creation">Creating a new group will make you leave your current group, are you sure you want to continue?</string>
    <string name="warning_title">Warning</string>
    <string name="added_user">Added Users</string>
    <string name="users_list">Users</string>
    <string name="switch_group">Switch Group</string>
    <string name="notify_add">Adding notification</string>
    <string name="notify_add_message">Would you like to notify this user?</string>
    <string name="send_to">Send to</string>
    <string name="notification_p1">&#160;has just added you to the group:&#160;</string>
    <string name="notification_p2">&#160;on the Hey!List app. Your username is: \"</string>
    <string name="notification_p3">\" Just download the FREE app \"Hey!List\" on the Google Play Store: https://play.google.com/store/apps/details?id=com.hey.youssef.hey.list and click on \"Added Users\" to complete your registration and access the group. See you very soon on Hey!List</string>
    <string name="added_users">Added Users</string>
    <string name="my_groups">My Groups</string>

</resources>
