...
        android:text="@string/confirm"
        android:textColor="#FFFF"
        android:layout_width="214dp"
        android:layout_height="32dp"
        tools:layout_editor_absoluteX="95dp"
        tools:layout_editor_absoluteY="152dp"
        android:id="@+id/login"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        android:background="#91A516"
        android:layout_weight="0.01" />

    <Button
        android:textColor="#FFFF"
...
